# OmniBot-v3

./: .env.example  .gitignore  README.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: CandlestickChart.tsx  ErrorBoundary.tsx  LoginScreen.tsx  MarketModuleCard.tsx  Panel.tsx  SettingsControlSurface.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  format.ts  types.ts
requirements/: linux-postgres-constraints.txt
scripts/: README.md  api_smoke.py  bootstrap.py  bootstrap_debian.sh  ensure_frontend_build.py  generate_systemd_units.py  init_runtime_permissions.py  install_linux.py  linux_preflight.py  publish_wsl_dashboard.ps1  quality_gate.py  release_evidence.py  release_readiness.py  restore_validation_report.py  run_backup.py  run_dashboard.ps1  run_dashboard.sh  run_wsl_linux_validation.ps1  runtime_probe.py  update_from_github.ps1  update_from_github.py  upgrade_linux.py  validate_linux_vm.py  verify_systemd_service.py
src/omnibot_v3/: __init__.py  main.py
src/omnibot_v3/api/: __init__.py  app.py
src/omnibot_v3/domain/: __init__.py  api.py  auth.py  broker.py  config.py  contracts.py  data_boundaries.py  data_lifecycle.py  health.py  preflight.py  runtime.py  secrets.py  strategy.py  worker.py
src/omnibot_v3/infra/: __init__.py  backup_restore.py  linux_install.py  linux_validation.py  live_broker.py  login_audit.py  market_data_store.py  mock_broker.py  operator_state_store.py  postgres_runtime_store.py  replay_broker.py  runtime_permissions.py  runtime_store.py  schema_migrations.py  secret_registry.py  session_store.py  settings_store.py  systemd_units.py  systemd_verification.py
src/omnibot_v3/services/: __init__.py  api_smoke.py  audit_api.py  broker_adapter.py  data_catalog.py  decision_engine.py  linux_preflight.py  login_audit.py  market_catalog.py  market_data_store.py  market_hours.py  market_integrations.py  market_worker.py  operator_state.py  orchestrator.py  release_evidence.py  release_readiness.py  risk_engine.py  rolling_decision_support.py  runtime_api.py  runtime_health.py  runtime_probe.py  runtime_store.py  scanner_feedback.py  scanner_learning.py  scanner_market_policy.py  scanner_replay_validation.py  scanner_runtime_support.py  scanner_symbol_evaluator.py  secret_api.py  secrets.py  session_auth.py  settings_api.py  strategy_scanner.py  text_formatting.py  trade_journal.py  trading_modules.py  update_manager.py
