[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnibot-v3"
version = "0.1.0"
description = "OmniBot v3 trading platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OmniBot" }
]
dependencies = []

[project.urls]
Documentation = "https://example.invalid/omnibot-v3/docs"

[project.optional-dependencies]
api = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
]
postgres = [
  "psycopg[binary]>=3.2",
]

[project.scripts]
omnibot-v3 = "omnibot_v3.main:main"
omnibot-v3-api = "omnibot_v3.api.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
