[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnibot-v3"
version = "0.1.0"
description = "OmniBot v3 trading platform"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OmniBot" }
]
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.116",
  "uvicorn>=0.35",
]
postgres = [
  "psycopg[binary]>=3.2",
]

[project.scripts]
omnibot-v3 = "omnibot_v3.main:main"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true